# CrewAI

article_generator/: README.md  pyproject.toml
article_generator/src/article_generator/: crew.py  main.py
article_generator/src/article_generator/config/: agents.yaml  tasks.yaml
auto_ml/: README.md  best_model.pkl  predict.py  pyproject.toml  sample_dataset.csv
auto_ml/src/auto_ml/: crew.py  main.py
auto_ml/src/auto_ml/config/: agents.yaml  tasks.yaml
auto_ml/src/auto_ml/tools/: custom_tool.py
greeting_flow/: README.md  crewai_flow.html  greeting.txt  pyproject.toml
greeting_flow/src/greeting_flow/: main.py
greeting_flow/src/greeting_flow/crews/client_greeting_crew/: client_greeting_crew.py
greeting_flow/src/greeting_flow/crews/client_greeting_crew/config/: agents.yaml  tasks.yaml
greeting_flow/src/greeting_flow/crews/colleague_greeting_crew/: colleague_greeting_crew.py
greeting_flow/src/greeting_flow/crews/colleague_greeting_crew/config/: agents.yaml  tasks.yaml
greeting_flow/src/greeting_flow/crews/family_greeting_crew/: family_greeting_crew.py
greeting_flow/src/greeting_flow/crews/family_greeting_crew/config/: agents.yaml  tasks.yaml
greeting_flow/src/greeting_flow/crews/friend_greeting_crew/: friend_greeting_crew.py
greeting_flow/src/greeting_flow/crews/friend_greeting_crew/config/: agents.yaml  tasks.yaml
greeting_flow/src/greeting_flow/crews/general_greeting_crew/: general_greeting_crew.py
greeting_flow/src/greeting_flow/crews/general_greeting_crew/config/: agents.yaml  tasks.yaml
human_resource_assistance_flow/: README.md  crewai_flow.html  employee_details.txt  pyproject.toml
human_resource_assistance_flow/knowledge/: Developers.json  Leads.json
human_resource_assistance_flow/src/human_resource_assistance_flow/: main.py
human_resource_assistance_flow/src/human_resource_assistance_flow/crews/developers_crew/: developers_crew.py
human_resource_assistance_flow/src/human_resource_assistance_flow/crews/developers_crew/config/: agents.yaml  tasks.yaml
human_resource_assistance_flow/src/human_resource_assistance_flow/crews/leads_crew/: leads_crew.py
human_resource_assistance_flow/src/human_resource_assistance_flow/crews/leads_crew/config/: agents.yaml  tasks.yaml
rag_flow/: Latest_Football_News_March_1_2025.txt  README.md  Sample_CSV_Data.csv  crewai_flow.html  pyproject.toml  response.txt
rag_flow/None/: employee_info.txt  response.txt
rag_flow/src/rag_flow/: main.py
rag_flow/src/rag_flow/crews/csv_rag_crew/: csv_rag_crew.py
rag_flow/src/rag_flow/crews/csv_rag_crew/config/: agents.yaml  tasks.yaml
rag_flow/src/rag_flow/crews/json_rag_crew/: json_rag_crew.py
rag_flow/src/rag_flow/crews/pdf_rag_crew/: pdf_rag_crew.py
rag_flow/src/rag_flow/crews/text_rag_crew/: text_rag_crew.py
rag_flow/src/rag_flow/crews/website_rag_crew/: website_rag_crew.py
(+8 files in other folders)
