[project]
name = "article_generator"
version = "0.1.0"
description = "article_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
article_generator = "article_generator.main:run"
run_crew = "article_generator.main:run"
train = "article_generator.main:train"
replay = "article_generator.main:replay"
test = "article_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
