[project]
name = "auto_ml"
version = "0.1.0"
description = "auto_ml using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0","joblib","scikit-learn"
]

[project.scripts]
auto_ml = "auto_ml.main:run"
run_crew = "auto_ml.main:run"
train = "auto_ml.main:train"
replay = "auto_ml.main:replay"
test = "auto_ml.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
