[project]
name = "human_resource_assistance_flow"
version = "0.1.0"
description = "human_resource_assistance_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
]

[project.scripts]
kickoff = "human_resource_assistance_flow.main:kickoff"
plot = "human_resource_assistance_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
