[project]
name = "rag_flow"
version = "0.1.0"
description = "rag_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0","ollama"
]

[project.scripts]
kickoff = "rag_flow.main:kickoff"
plot = "rag_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
